--- a/_posts/2018-03-09-test.markdown
+++ b/_posts/2018-03-09-test.markdown
@@ -1,6 +1,6 @@
 ---
-layout: post
-title:  "Welcome to Jekyll!"
+#layout: post
+title:  "Test"
 date:   2018-03-07 20:59:31 -0600
 categories: blog
 ---
